links are better

--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
           <td>{{ result[0] }}</td>
           <td>{{ result[1] }} {{ result[2] }} {{ result[3] }} {{ result[4] }}</td>
           <td>{{ result[5] }}</td>
-          <td>{{ result[6] }}</td>
+          <td><a href="{{ result[6] }}" target="_blank">Yelp Page</a></td>
           <td>{{ result[7] }}</td>
           <td> <button type="button" class="btn btn-primary">More Info</button></td>
         </tr>
