--- a/templates/index.html
+++ b/templates/index.html
@@ -94,14 +94,17 @@
           <td>{{ result[7] }}</td>
           <td> <button type="button" class="btn btn-primary">More Info</button></td>
         </tr>
-        <tr style="display:none">
+        <!-- <tr style="display:none">
           <td>
-          Grade: {{ result[7] }} 
-        </td>
-        <td>
-          Violation Count: {{ result[8] }} Grade: {{ result[7] }} 
-        </td>
-        </tr>
+            Grade: {{ result[7] }} 
+          </td>
+          <td>
+            Violation Count: {{ result[8] }} Grade: {{ result[7] }} 
+          </td>
+        </tr> -->
+        <div style="display:none">
+         <p>a;lskfjadls;kfj</p>
+        </div>
         {% endfor %}
       </tbody>
     </table>
